# pyml-book

./: .gitignore  README.md  pyproject.toml  setup.py
ch1-training-simple-ml-algorithms/: adaline.py  demo.ipynb  perceptron.py  utils.py
ch2-tour-of-ml-classifiers/: LOGISTIC_REGRESSION_DERIVATION.md  demo.ipynb  logisticreg.py
ch3-preparing-data/: data-prep.ipynb  sbs.py
ch4-data-compression/: data-compression.ipynb
ch5-best-practices/: demo.ipynb
ch6-esnsemble-methods/: ensemble_error.py  majority_vote.py
helpers/: utils.py
utils/: utils.py
