[project]
name = "pyml-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=80.0.0,<81.0.0",
    "skimpy>=0.0.20",
]
